force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/ucinn_ascendv2__X1_Academic_Org__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__X1_Academic_Org__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Academic Org</label>
    <lookupFilter>
        <active>false</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>ucinn_ascendv2__Academic_Organization__c.ucinn_ascendv2__Type__c</field>
            <operation>equals</operation>
            <value>Academic Org</value>
        </filterItems>
        <filterItems>
            <field>ucinn_ascendv2__Academic_Organization__c.ucinn_ascendv2__Type__c</field>
            <operation>equals</operation>
            <value>Both</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ucinn_ascendv2__Academic_Organization__c</referenceTo>
    <relationshipLabel>Designations (Academic Org)</relationshipLabel>
    <relationshipName>Designations_Academic_Org</relationshipName>
    <type>Lookup</type>
</CustomField>