force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/ucinn_ascendv2__X1_Department_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__X1_Department_Name_Formula__c</fullName>
    <formula>ucinn_ascendv2__X1_Department__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Department Name</label>
    <type>Text</type>
</CustomField>