force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/ucinn_portal_Display_Order__c.field-meta.xml
<CustomField>
    <fullName>ucinn_portal_Display_Order__c</fullName>
    <label>Portal Display Order</label>
    <length>10</length>
    <type>Text</type>
</CustomField>