force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/University_Account__c.field-meta.xml
<CustomField>
    <fullName>University_Account__c</fullName>
    <label>University Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>