force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/Update_Fund__c.field-meta.xml
<CustomField>
    <fullName>Update_Fund__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update Fund</label>
    <type>Checkbox</type>
</CustomField>