force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/WD_Acct__c.field-meta.xml
<CustomField>
    <fullName>WD_Acct__c</fullName>
    <externalId>true</externalId>
    <label>WD Acct</label>
    <length>255</length>
    <type>Text</type>
</CustomField>