force-app/main/default/objects/ucinn_ascendv2__Designation__c/validationRules/ucinn_ascendv2__Unit_Percentage_Rules.validationRule-meta.xml
<ValidationRule>
    <fullName>ucinn_ascendv2__Unit_Percentage_Rules</fullName>
    <active>false</active>
    <description>Unit percentage rules must total 100%.</description>
    <errorConditionFormula>AND(
$Setup.ucinn_ascendv2__Bypass_Settings__c.ucinn_ascendv2__Bypass_Validation_Rules__c  &lt;&gt; TRUE,
(ucinn_ascendv2__Unit_1_Percentage__c + ucinn_ascendv2__Unit_2_Percentage__c)&lt;&gt;1.00 )</errorConditionFormula>
    <errorDisplayField>ucinn_ascendv2__Unit_1_Percentage__c</errorDisplayField>
    <errorMessage>Unit 1 percentage + unit 2 percentage must total 100%.</errorMessage>
</ValidationRule>