force-app/main/default/objects/ucinn_ascendv2__Designation__c/listViews/ASG_Funds_closed_in_the_last_quarter.listView-meta.xml
<ListView>
    <fullName>ASG_Funds_closed_in_the_last_quarter</fullName>
    <columns>ucinn_ascendv2__Status_Formula__c</columns>
    <columns>NAME</columns>
    <columns>ucinn_ascendv2__Designation_Name__c</columns>
    <columns>FE_ProjectInactiveDate__c</columns>
    <columns>ASG_Ask_Remove_Fund__c</columns>
    <columns>ASG_Ask_Replace_Fund__c</columns>
    <columns>Ask_Replace_Fund_Formal_Title__c</columns>
    <columns>ucinn_ascendv2__Business_Unit_Formula__c</columns>
    <columns>ucinn_ascendv2__X1_Department__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ucinn_ascendv2__Status_Formula__c</field>
        <operation>equals</operation>
        <value>Inactive</value>
    </filters>
    <filters>
        <field>FE_ProjectInactiveDate__c</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:60</value>
    </filters>
    <label>ASG- Funds closed in the 60 days</label>
    <sharedTo>
        <group>Annual_and_Special_Gifts</group>
    </sharedTo>
</ListView>