force-app/main/default/objects/ucinn_ascendv2__Designation__c/listViews/Call_Center_Allowed_Funds.listView-meta.xml
<ListView>
    <fullName>Call_Center_Allowed_Funds</fullName>
    <columns>NAME</columns>
    <columns>ucinn_ascendv2__Designation_Name__c</columns>
    <columns>ucinn_ascendv2__Status_Formula__c</columns>
    <columns>Encompass_ID__c</columns>
    <columns>ucinn_ascendv2__Is_Publicly_Visible__c</columns>
    <columns>ucinn_ascendv2__Business_Unit_Formula__c</columns>
    <columns>ucinn_ascendv2__X1_Department__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Encompass_ID__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>ucinn_ascendv2__Is_Publicly_Visible__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>ucinn_ascendv2__Status_Formula__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Call Center Allowed Funds</label>
</ListView>