force-app/main/default/objects/ucinn_ascendv2__Designation__c/listViews/Fund_Search1.listView-meta.xml
<ListView>
    <fullName>Fund_Search1</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ucinn_ascendv2__Fund_Name__c</field>
        <operation>contains</operation>
        <value>sculpture</value>
    </filters>
    <label>Fund Search</label>
</ListView>