force-app/main/default/objects/ucinn_ascendv2__Designation__c/listViews/Funds_with_Donor_Issues.listView-meta.xml
<ListView>
    <fullName>Funds_with_Donor_Issues</fullName>
    <columns>NAME</columns>
    <columns>Donor_Issue_Tracking__c</columns>
    <columns>ucinn_ascendv2__Designation_Name__c</columns>
    <columns>ucinn_ascendv2__Business_Unit_Formula__c</columns>
    <columns>ucinn_ascendv2__X1_Department__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Donor_Issue_Tracking__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Funds with Donor Issue</label>
</ListView>