force-app/main/default/objects/ucinn_ascendv2__Designation__c/listViews/Inactive_Funds.listView-meta.xml
<ListView>
    <fullName>Inactive_Funds</fullName>
    <columns>ucinn_ascendv2__Status_Formula__c</columns>
    <columns>NAME</columns>
    <columns>ucinn_ascendv2__Designation_Name__c</columns>
    <columns>FE_ProjectInactiveDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ucinn_ascendv2__Status_Formula__c</field>
        <operation>equals</operation>
        <value>Inactive</value>
    </filters>
    <label>Inactive Funds</label>
</ListView>