force-app/main/default/objects/ucinn_ascendv2__Designation__c/listViews/RK_list.listView-meta.xml
<ListView>
    <fullName>RK_list</fullName>
    <columns>NAME</columns>
    <columns>ucinn_ascendv2__Designation_Name__c</columns>
    <columns>ucinn_ascendv2__X1_Academic_Org_Name_Formula__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ucinn_ascendv2__Business_Unit_Formula__c</field>
        <operation>contains</operation>
        <value>Athletic</value>
    </filters>
    <label>RK list</label>
</ListView>