force-app/main/default/objects/ucinn_ascendv2__Designation__c/listViews/Student_Experience_Funds.listView-meta.xml
<ListView>
    <fullName>Student_Experience_Funds</fullName>
    <columns>ucinn_ascendv2__Status_Formula__c</columns>
    <columns>NAME</columns>
    <columns>ucinn_ascendv2__Designation_Name__c</columns>
    <columns>ucinn_ascendv2__G_L_Account__c</columns>
    <columns>ucinn_ascendv2__X1_Academic_Org__c</columns>
    <columns>ucinn_ascendv2__X1_Department__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>ucinn_ascendv2__External_System_ID__c</columns>
    <columns>ucinn_ascendv2__Department_Code_Formula__c</columns>
    <columns>ucinn_ascendv2__Fund_Group__c</columns>
    <columns>Fund_Group__c</columns>
    <columns>Fund_Purpose__c</columns>
    <columns>Secondary_Goal__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ucinn_ascendv2__Designation_Name__c</field>
        <operation>contains</operation>
        <value>student experience</value>
    </filters>
    <filters>
        <field>ucinn_ascendv2__Designation_Name__c</field>
        <operation>notContain</operation>
        <value>lagerstrom,EH&amp;S</value>
    </filters>
    <label>Student Experience Funds</label>
    <sharedTo>
        <group>Priority_Initiatives</group>
    </sharedTo>
</ListView>