force-app/main/default/objects/ucinn_ascendv2__Designation__c/listViews/ucinn_ascendv2__Payroll_Code_Designations.listView-meta.xml
<ListView>
    <fullName>ucinn_ascendv2__Payroll_Code_Designations</fullName>
    <columns>NAME</columns>
    <columns>ucinn_ascendv2__G_L_Account__c</columns>
    <columns>ucinn_ascendv2__Designation_Name__c</columns>
    <columns>ucinn_ascendv2__Academic_Organization__c</columns>
    <columns>ucinn_ascendv2__Payroll_Code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ucinn_ascendv2__Payroll_Code__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Payroll Code Designations</label>
</ListView>