force-app/main/default/objects/ucinn_ascendv2__Designation__c/listViews/X3_year_no_review.listView-meta.xml
<ListView>
    <fullName>X3_year_no_review</fullName>
    <booleanFilter>1 AND 2 AND 3 AND (4 or 5)</booleanFilter>
    <columns>NAME</columns>
    <columns>Donor_Issue_Tracking__c</columns>
    <columns>ucinn_ascendv2__Designation_Name__c</columns>
    <columns>ucinn_ascendv2__Business_Unit_Formula__c</columns>
    <columns>ucinn_ascendv2__X1_Department__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FE_ActiveStatus__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <filters>
        <field>FE_ProjectStatus__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <filters>
        <field>Fund_Group__c</field>
        <operation>notEqual</operation>
        <value>Gift Annuity,Trust</value>
    </filters>
    <filters>
        <field>Most_Recent_Fund_Note__c</field>
        <operation>lessThan</operation>
        <value>3/1/2019</value>
    </filters>
    <filters>
        <field>Most_Recent_Fund_Note__c</field>
        <operation>equals</operation>
    </filters>
    <label>3 year no review</label>
</ListView>